fix: corrected grammer in quote 4. Changed margin in 1200px media query for how it works page to remove white space.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,7 +590,7 @@ footer {
     width: 60%;
     padding: 20px;
     margin-left: 10vw;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
     color: #fff;
     display: block;
     background-color: rgba(0, 0, 0, 0.6);
